--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@uploadthing/react": "^5.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^4.0.0",
     "lucide-react": "^0.289.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "touch-cli": "^0.0.1",
     "uploadthing": "^5.7.2"
   },
   "devDependencies": {
