--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.0.0",
     "gh-pages": "^4.0.0",
     "lucide-react": "^0.289.0",
-    "next": "latest",
+    "next": "^13.5.4",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
