--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@types/video.js": "^7.3.3",
     "@uploadthing/react": "^5.7.0",
     "aos": "^2.3.4",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.0.0-rc19",
     "gh-pages": "^4.0.0",
     "lucide-react": "^0.289.0",
     "next": "^13.5.4",
@@ -29,7 +32,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "touch-cli": "^0.0.1",
-    "uploadthing": "^5.7.2"
+    "uploadthing": "^5.7.2",
+    "video.js": "^7.6.5"
   },
   "devDependencies": {
     "@types/aos": "^3.0.6",
