--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && touch ./out/.nojekyll",
+    "build": "next build",
     "start": "npx serve@latest out",
     "lint": "next lint",
     "predeploy": "npm run build",
