feat: add ig token to env

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://naluwan.github.io/focus_space_official_website/",
-  "name": "nextjs-practice",
+  "name": "focus_space_official_website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
